# simplex

./: Cargo.toml  README.md  REAMDE.md  TODO.md
.devcontainer/: devcontainer.json
src/: cli.rs  main.rs
