[package]
name = "simplex"
version = "0.1.0"
edition = "2021"
authors = ["Salim Larhrib (https://github.com/larsal007)"]
description = 'Simplex, a uncomplicated regex cli written in Rust'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["cargo"] }
regex = "1.10.2"
